--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "white-october/pagerfanta-bundle"      : "^1.0"
     },
     "require-dev": {
+	"phing/phing"                          : "*",
         "dama/doctrine-test-bundle"            : "^1.0",
         "friendsofphp/php-cs-fixer"            : "^2.0",
         "phpunit/phpunit"                      : "^4.8 || ^5.0",
