--- a/build.xml
+++ b/build.xml
@@ -147,8 +147,6 @@
 
 
 
-
-
 	<target name="phpcpd" unless="phpcpd.done" description="Find duplicate code using PHPCPD and print human readable output. Intended for usage on the command line before committing.">
 		<exec executable="${phpcpd}" taskname="phpcpd">
 		<arg path="${project.basedir}/src"/>
@@ -169,7 +167,7 @@
 	<target name="phpunit" unless="phpunit.done" depends="prepare" description="Run unit tests with PHPUnit">
 		<exec executable="${phpunit}" taskname="phpunit">
 		<arg value="--configuration"/>
-		<arg path="${project.basedir}/build/phpunit.xml"/>
+		<arg path="${project.basedir}/phpunit.xml"/>
 		</exec>
 		<property name="phpunit.done" value="true"/>
 	</target>
@@ -177,7 +175,7 @@
 	<target name="phpunit-no-coverage" unless="phpunit.done" depends="prepare" description="Run unit tests with PHPUnit (without generating code coverage reports)">
 		<exec executable="${phpunit}" failonerror="true" taskname="phpunit">
 		<arg value="--configuration"/>
-		<arg path="${project.basedir}/build/phpunit.xml"/>
+		<arg path="${project.basedir}/phpunit.xml"/>
 		<arg value="--no-coverage"/>
 		</exec>
 		<property name="phpunit.done" value="true"/>
