--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,13 @@ sonar.projectKey     = my-unique-project-key-symjenk
 sonar.projectName    = symjenk
 sonar.projectVersion = 0.1.0
 sonar.sources        = src
+
+sonar.tests=tests
+
+sonar.language=php
+
+sonar.sourceEncoding=UTF-8
+
+# Reusing PHPUnit reports
+sonar.php.coverage.reportPath=build/logs/clover.xml
+sonar.php.tests.reportPath=phpunit.xml
