--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,4 +11,4 @@ sonar.sourceEncoding=UTF-8
 
 # Reusing PHPUnit reports
 sonar.php.coverage.reportPath=build/logs/clover.xml
-sonar.php.tests.reportPath=phpunit.xml
+sonar.php.tests.reportPath=build/logs/junit.xml
